--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -2,4 +2,7 @@ div#content {
 	width: 95%;
 	min-width: 75em;
 	max-width: 100em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
