--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -7,3 +7,26 @@ div#content {
     margin-left: auto;
     margin-right: auto;
 }
+
+div.accounttree-root-nochildren {
+	position: relative;
+	left: 24px;
+}
+div.accounttree {
+	position: relative;
+	left: -24px;
+}
+div.accounttree-nochildren {
+	position: relative;
+	left: 0px;
+}
+
+div.accounttree div {
+	padding-left: 24px;
+}
+div.accounttree-root div {
+	padding-left: 24px;
+}
+.accounttree-name {
+	padding: 3px;
+}
