transaction register: Scroll on overflow of table, not whole pane

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -75,6 +75,11 @@ div.accounttree-root div {
 	display: block;
 	width: 100%;
 	height: 100%;
+}
+.transactions-register {
+	display: block;
+	width: 100%;
+	height: 100%;
 	overflow: auto;
 }
 .transactions-column {
