Simplify security editing UI

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -63,7 +63,7 @@ div.accounttree-root div {
 	height: 100%-100px;
 	overflow: auto;
 }
-.account-column, .securitylist-column {
+.account-column {
 	padding: 15px 15px 43px 15px;
 	border-right: 1px solid #DDD;
 	border-left: 1px solid #DDD;
@@ -84,7 +84,7 @@ div.accounttree-root div {
 	height: 100%;
 	overflow: auto;
 }
-.transactions-column, .securities-column {
+.transactions-column {
 	padding: 15px;
 	border-right: 1px solid #DDD;
 }
