--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,20 +1,11 @@
 @import url("reports.css");
 
-html, body {
-	height: 100%;
-}
 div#content {
 	display: block;
 	width: 95%;
-	height: 100%;
 	min-width: 75em;
 	max-width: 100em;
 	margin: auto;
-}
-
-/* Keep the main windows sized to the full viewable height */
-.fullheight {
-	height: 100%;
 }
 
 .ui {
@@ -34,11 +25,18 @@ div#content {
 }
 
 /* Tabs */
+
 .nav-tabs {
 	margin-bottom: 15px;
 }
-#mainNavigationTabs .nav-tabs {
-	margin-bottom: 0px;
+
+.account-filter-menuitem > a {
+	padding: 0px 5px !important;
+}
+
+.clear-account-filter {
+	height: 34px;
+	padding: 6px;
 }
 
 /* Style the account tree */
@@ -49,6 +47,7 @@ div.accounttree-root-nochildren {
 div.accounttree {
 	position: relative;
 	left: -24px;
+	white-space: nowrap;
 }
 div.accounttree-nochildren {
 	position: relative;
@@ -67,38 +66,25 @@ div.accounttree-root div {
 
 .accounttree-root {
 	display: block;
-	width: 100%;
-	height: 100%-100px;
-	overflow: auto;
+	margin-left: 5px;
 }
-.account-column {
-	padding: 15px 15px 43px 15px;
-	border-right: 1px solid #DDD;
-	border-left: 1px solid #DDD;
-}
-.account-buttongroup {
-	position: absolute;
-	right: 15px;
-	bottom: 15px;
+.accounttree-expandbutton {
+	padding-bottom: 6px;
 }
 .transactions-container {
 	display: block;
 	width: 100%;
-	height: 100%;
 }
 .transactions-register {
 	display: block;
 	width: 100%;
-	height: 100%;
 	overflow: auto;
-}
-.transactions-column {
-	padding: 15px;
-	border-right: 1px solid #DDD;
 }
 .transactions-register-toolbar {
 	width: 100%;
-	height: 50px;
+}
+td.amount-cell {
+	white-space: nowrap;
 }
 
 .register-row-editing {
